# django-command

./: LICENSE  Makefile  README.md  README_RU.md  command-v2.py  command.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
django_command/: command.py
