[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[project]
name = "django-command"
dynamic = ["version"]
#version = "1.0.0"
dependencies = [
    "inquirer>=3.1.3"
]
requires-python = ">=3.5"
maintainers = [
    { name = "Isaev Abbas", email = "abbas.isaev@gmail.com" }
]
#authors = [
#    { name = "Isaev Abbas", email = "abbas.isaev@gmail.com" }
#]
description = "Часто используемые команды при разработке проектов на Django."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django-command", "Django", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = { attr = "django_command.__version__" }

[project.urls]
Homepage = "https://github.com/AbbasIsaev/django-command"
Repository = "https://github.com/AbbasIsaev/django-command.git"

[project.scripts]
django-command = "django_command.command:cli"
